<resources>
    <string name="app_name">Daybook</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="current_data">current data</string>
    <string name="events">Events</string>
    <string name="notes">Notes</string>
    <string name="alarms">Alarms</string>

    <string name="delete_title">Are you sure?</string>
    <string name="dialog_OK">OK</string>
    <string name="dialog_CANCEL">CANCEL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleText">Title</string>
    <string name="dateText">Date</string>
    <string name="descText">Description</string>
    <string name="createEventTitle">Enter event\'s details</string>
    <string name="eventTitle">Event\'s title</string>
    <string name="eventDescription">Event\'s description</string>
    <string name="eventDate">Event\'s date</string>
    <string name="createEvent">Create event!</string>
    <string name="noteDescription">Note\'s description</string>
    <string name="createNote">Create note!</string>
    <string name="createNoteTitle">Enter note\'s detalis</string>
    <string name="createAlarmTitle">Set alarm\'s time</string>
    <string name="pick_time">Pick time</string>
    <string name="createAlarm">Create alarm!</string>
    <string name="editEventTitle">Edit event\'s details</string>
    <string name="editEvent">Save changes!</string>
    <string name="noteEditTitle">Change note\'s details</string>
    <string name="updateNote">Save changes!</string>
    <string name="timeText">Time</string>
    <string name="alarm_title">It\'s time to wake up!</string>
    <string name="stop_alarm">Stop alarm</string>
</resources>
