<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.daybook.EventEditActivity">

    <TextView
        android:id="@+id/eventEditTitleView"
        android:layout_width="560dp"
        android:layout_height="wrap_content"
        android:text="@string/editEventTitle"
        android:textSize="14pt"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColor="@color/jet">
    </TextView>

    <EditText
        android:id="@+id/eventEditTitle"
        android:layout_height="wrap_content"
        android:hint="@string/eventTitle"
        android:layout_width="fill_parent"
        android:layout_marginTop="11dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title">
    </EditText>


    <EditText
        android:id="@+id/eventEditDescription"
        android:layout_height="210dp"
        android:hint="@string/eventDescription"
        android:inputType="textMultiLine"
        android:lines="10"
        android:gravity="top"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="fill_parent">
    </EditText>

    <TextView
        android:id="@+id/eventDateEditView"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialog"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:paddingStart="50dp"
        android:paddingEnd="10dp"
        android:text="Event's date"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <Button
        android:id="@+id/saveEditEvent"
        android:layout_height="wrap_content"
        android:text="@string/editEvent"
        android:background="@color/jet"
        android:textColor="@color/white"
        android:onClick="updateEvent"
        android:layout_width="fill_parent"
        android:layout_marginBottom="60dp">
    </Button>
</LinearLayout>