<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daybook.NoteCreateActivity">

    <TextView
        android:id="@+id/createNoteTitle"
        android:layout_width="560dp"
        android:layout_height="wrap_content"
        android:text="@string/createNoteTitle"
        android:textSize="14pt"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColor="@color/jet"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

    </TextView>

    <EditText
        android:id="@+id/noteDescription"
        android:layout_height="210dp"
        android:hint="@string/noteDescription"
        android:inputType="textMultiLine"
        android:lines="10"
        android:gravity="top"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="fill_parent"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/createNoteTitle"
        android:layout_alignParentStart="true">
    </EditText>

    <Button
        android:id="@+id/createNote"
        android:layout_height="wrap_content"
        android:text="@string/createNote"
        android:onClick="createNote"
        android:background="@color/jet"
        android:textColor="@color/white"
        android:layout_width="fill_parent"
        android:layout_marginTop="82dp"
        android:layout_below="@+id/noteDescription"
        android:layout_alignParentStart="true">
    </Button>

</RelativeLayout>
