<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daybook.EventInfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/titleText" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/titleTextView"
        android:gravity="center_horizontal"
        android:layout_alignLeft="@+id/titleTextView"
        android:layout_alignStart="@+id/titleTextView"
        android:layout_alignRight="@+id/titleTextView"
        android:layout_alignEnd="@+id/titleTextView"
        android:text="@string/dateText" />

    <TextView
        android:id="@+id/descTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/dateTextView"
        android:layout_centerInParent="true"
        android:layout_alignLeft="@+id/dateTextView"
        android:layout_alignStart="@+id/dateTextView"
        android:layout_alignRight="@+id/dateTextView"
        android:layout_alignEnd="@+id/dateTextView"
        android:layout_marginTop="50dp"
        android:text="@string/descText"/>
</RelativeLayout>
